FlexDeploy 8.0/fdtlt82/FLEXDEPLOY-12131/objects/agf__ADM_Third_Party_Software__c.object
<CustomObject>
    <fields>
        <fullName>agf__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Cloud__c</fullName>
        <formula>agf__Scrum_Team__r.agf__Cloud_LU__r.Name</formula>
        <label>Cloud</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Coupa_Record__c</fullName>
        <description>For commercial products only.</description>
        <inlineHelpText>Link to the Coupa record for this product (for commercial products only).</inlineHelpText>
        <label>Coupa Record</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>agf__Date_Approval_Needed_By__c</fullName>
        <defaultValue>Today() + 28</defaultValue>
        <description>Date equivalent to your teams feature freeze date. Please account for 3PP SLA time frames referenced on site</description>
        <inlineHelpText>Date equivalent to your teams feature freeze date. Please account for 3PP SLA time frames referenced on site</inlineHelpText>
        <label>Date Approval Needed By</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Does_this_contain_JavaScript__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does this contain JS or similar code articulated in a client browser? Do portions of the package run in the user’s browser?</inlineHelpText>
        <label>Old does this contain JavaScript?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Does_this_contain_client_side_code__c</fullName>
        <inlineHelpText>Does this project contain JavaScript or similar code articulated in a client browser? Do portions of the package run in the user’s browser?</inlineHelpText>
        <label>Is there any client-side code?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Jar_Name__c</fullName>
        <label>Jar Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__License_Type__c</fullName>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Open Source</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__License_URL__c</fullName>
        <inlineHelpText>Please provide a link that demonstrates what license governs this particular 3PP request. It should not be a link to a generic copy of an open source license.</inlineHelpText>
        <label>License URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>agf__Module__c</fullName>
        <label>Module</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>apex-parser</fullName>
                </value>
                <value>
                    <fullName>platform</fullName>
                </value>
                <value>
                    <fullName>resin</fullName>
                </value>
                <value>
                    <fullName>sfdc</fullName>
                </value>
                <value>
                    <fullName>sfdc-test/func</fullName>
                </value>
                <value>
                    <fullName>sfdc-test/unit</fullName>
                </value>
                <value>
                    <fullName>shared</fullName>
                </value>
                <value>
                    <fullName>shared/endorsed</fullName>
                </value>
                <value>
                    <fullName>udd</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Notes__c</fullName>
        <inlineHelpText>WIll you distribute the code to anyone outside of our data centers?</inlineHelpText>
        <label>Use Cases/Notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Perforce_Path__c</fullName>
        <description>Link to Perforce Path or Direct Download Link</description>
        <inlineHelpText>Link to Perforce Path or Direct Download Link</inlineHelpText>
        <label>Source Code Path or URL</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Purpose__c</fullName>
        <inlineHelpText>Please describe what this Third Party Property does and why you want to use it.</inlineHelpText>
        <label>Purpose</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Request_Sub_Type__c</fullName>
        <label>Request Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>agf__Request_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Clients</fullName>
                </value>
                <value>
                    <fullName>Compiler</fullName>
                </value>
                <value>
                    <fullName>Framework</fullName>
                </value>
                <value>
                    <fullName>IDE</fullName>
                </value>
                <value>
                    <fullName>Other Software</fullName>
                </value>
                <value>
                    <fullName>Plug-In</fullName>
                </value>
                <value>
                    <fullName>SDK</fullName>
                </value>
                <value>
                    <fullName>Tool</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Request_Type_Other__c</fullName>
        <label>Request Type Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Trademarks, Logos and Icons</fullName>
                </value>
                <value>
                    <fullName>Fonts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Scheduled_Build__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheduled Build or Release</label>
        <referenceTo>agf__ADM_Build__c</referenceTo>
        <relationshipLabel>Third Party Software</relationshipLabel>
        <relationshipName>Third_Party_Software</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Scrum_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scrum Team (Owner)</label>
        <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
        <relationshipLabel>Third Party Software</relationshipLabel>
        <relationshipName>Third_Party_Software</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__URL__c</fullName>
        <description>Link to product information page.</description>
        <inlineHelpText>Please provide the URL containing information about the Third Party Property.</inlineHelpText>
        <label>Third Party Property product info URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>agf__Used_By__c</fullName>
        <label>Used By</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Vendor__c</fullName>
        <label>Vendor</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Version__c</fullName>
        <label>Version</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Will_this_code_be_distributed__c</fullName>
        <inlineHelpText>Will this code be distributed outside of Salesforce?</inlineHelpText>
        <label>Will this code be distributed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Will_you_actually_modify_the_code__c</fullName>
        <inlineHelpText>Will you modify the code, or simply use it as-is?</inlineHelpText>
        <label>Will you modify the code?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Will_you_modify_the_code__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Will you use the code as-is or will you modify it?</inlineHelpText>
        <label>Old will you modify the code?</label>
        <type>Checkbox</type>
    </fields>
    <label>Third Party Software</label>
    <listViews>
        <fullName>agf__All</fullName>
        <columns>NAME</columns>
        <columns>agf__Version__c</columns>
        <columns>agf__Jar_Name__c</columns>
        <columns>agf__Scrum_Team__c</columns>
        <columns>agf__Purpose__c</columns>
        <columns>agf__Used_By__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>agf__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>agf__No_owner</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>agf__Jar_Name__c</columns>
        <columns>agf__Used_By__c</columns>
        <columns>agf__Scrum_Team__c</columns>
        <filterScope>Everything</filterScope>
        <label>No owner</label>
    </listViews>
    <nameField>
        <label>Third Party Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Third Party Software</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>agf__DateApprovalNeeded</fullName>
        <active>true</active>
        <description>Date Approval Needed</description>
        <errorConditionFormula>agf__Date_Approval_Needed_By__c  &lt;  TODAY() + 28</errorConditionFormula>
        <errorDisplayField>agf__Date_Approval_Needed_By__c</errorDisplayField>
        <errorMessage>Date Approval Needed By can not be less than 28 days from today.</errorMessage>
    </validationRules>
</CustomObject>